tests/negative/gold/missing_body_test.gold
tests/negative/missing_body_test.toit:5:1: error: Missing body
foo
^~~
tests/negative/missing_body_test.toit:6:1: error: Missing body
bar x y=unresolved
^~~
tests/negative/missing_body_test.toit:9:3: error: Missing body
  foo
  ^~~
tests/negative/missing_body_test.toit:10:3: error: Missing body
  bar x y=unresolved
  ^~~
tests/negative/missing_body_test.toit:6:9: error: Unresolved identifier: 'unresolved'
bar x y=unresolved
        ^~~~~~~~~~
tests/negative/missing_body_test.toit:10:11: error: Unresolved identifier: 'unresolved'
  bar x y=unresolved
          ^~~~~~~~~~
Compilation failed.
